<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="steak_house">Steak House</string>
    <string name="category">Category</string>
    <string name="restaurants">Restaurants</string>
    <string name="working_times">Working Times</string>
    <string name="_24_7_365">24/7/365</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="ketchen_cookie">ketchen.cookie</string>
    <string name="ketchen">Ketchen :)</string>
</resources>
